2003-03-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (ANIMATE_CLASS,HOTKEY_CLASS,PROGRESS_CLASS,
	STATUSCLASSNAME,TOOLBARCLASSNAME,TOOLTIPS_CLASS,TRACKBAR_CLASS,
	UPDOWN_CLASS,WC_COMBOBOXEX,WC_HEADER,WC_IPADDRESS,WC_LISTVIEW,
	WC_TABCONTROL,WC_TREEVIEW): Move UNICODE mappings out of
	RC_INVOKED guard. 
 	(WC_PAGESCROLLER,WC_NATIVEFONTCTL,WC_BUTTON,WC_STATIC,WC_EDIT,
	WC_LISTBOX,WC_COMBOBOX,WC_SCROLLBAR): Add defines.

2003-03-28  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winnt.h (WAITORTIMERCALLBACKFUNC): Add typedef.

2003-03-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/secext.h (GetComputerObjectName[AW],GetUserNameEx[AW],
	TranslateName[AW]): Add prototypes.
	* lib/sec32.def (GetComputerObjectName[AW],GetUserNameEx[AW],
	TranslateName[AW]): Add stubs.
	* lib/test.c: Include secext.h.

2003-03-27  Vladimir Michl  <michlv@users.sourceforge.net>

	* include/ddk/ndis.h (NdisAllocateSpinLock,NdisFreeSpinLock,
	NdisAcquireSpinLock,NdisReleaseSpinLock,NdisDprAcquireSpinLock,
	NdisDprReleaseSpinLock): Change macro argument from SpinLock to
	_SpinLock.

2003-03-26  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h: Increment version to 2.4.
	* Makefile.in: Ditto.

2003-03-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/batclass.h (BATTERY_REPORTING_SCALE)
	Move structure from here...
	* include/winnt.h (BATTERY_REPORTING_SCALE): To here.

	* include/ddk/ntapi.h (JOBOBJECT_*):
	Remove structures and enums definitions.
  	(JOB_OBJECT*): Move defines from here...
	* include/winnt.h (JOB_OBJECT* ): To here.

	* include/ddk/ntpoapi.h (LATENCY_TIME, POWER_ACTION_POLICY,
	SYSTEM_POWER_LEVEL, SYSTEM_POWER_POLICY,
	PROCESSOR_POWER_POLICY_INFO, PROCESSOR_POWER_POLICY,
	ADMINISTRATOR_POWER_POLICY, SYSTEM_POWER_INFORMATION,
	PROCESSOR_POWER_INFORMATION, SYSTEM_BATTERY_STATE,
	SYSTEM_POWER_CAPABILITIES): Move enums, structures
	and associated defines from here ...