@@ -18,6 +18,128 @@ typedef interface IHTMLStyleSheetsCollection *LPHTMLSTYLESHEETSCOLLECTION;
 typedef interface IHTMLStyleSheet *LPHTMLSTYLESHEET;
 typedef interface IHTMLStyle *LPHTMLSTYLE;
 typedef interface IHTMLFiltersCollection *LPHTMLFILTERSCOLLECTION;
+typedef interface IHTMLLinkElement *LPHTMLLINKELEMENT;
+typedef interface IHTMLImgElement *LPHTMLIMGELEMENT;
+
+EXTERN_C const IID IID_IHTMLLinkElement;
+#undef INTERFACE
+#define INTERFACE IHTMLLinkElement
+DECLARE_INTERFACE_(IHTMLLinkElement,IDispatch)
+{
+	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
+	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
+	STDMETHOD_(ULONG,Release)(THIS) PURE;
+	STDMETHOD(GetTypeInfoCount)(THIS_ UINT*) PURE;
+	STDMETHOD(GetTypeInfo)(THIS_ UINT,LCID,LPTYPEINFO*) PURE;
+	STDMETHOD(GetIDsOfNames)(THIS_ REFIID,LPOLESTR*,UINT,LCID,DISPID*) PURE;
+	STDMETHOD(Invoke)(THIS_ DISPID,REFIID,LCID,WORD,DISPPARAMS*,VARIANT*,EXCEPINFO*,UINT*) PURE;
+
+	STDMETHOD(put_href)(THIS_ BSTR) PURE;
+	STDMETHOD(get_href)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_rel)(THIS_ BSTR) PURE;
+	STDMETHOD(get_rel)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_rev)(THIS_ BSTR) PURE;
+	STDMETHOD(get_rev)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_type)(THIS_ BSTR) PURE;
+	STDMETHOD(get_type)(THIS_ BSTR*) PURE;
+	STDMETHOD(get_readyState)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_onreadystatechange)(THIS_ VARIANT) PURE;
+	STDMETHOD(get_onreadystatechange)(THIS_ VARIANT*) PURE;
+	STDMETHOD(put_onload)(THIS_ VARIANT) PURE;
+	STDMETHOD(get_onload)(THIS_ VARIANT*) PURE;
+	STDMETHOD(put_onerror)(THIS_ VARIANT) PURE;
+	STDMETHOD(get_onerror)(THIS_ VARIANT*) PURE;
+	STDMETHOD(get_styleSheet)(THIS_ LPHTMLSTYLESHEET*) PURE;
+	STDMETHOD(put_disabled)(THIS_ VARIANT_BOOL) PURE;
+	STDMETHOD(get_disabled)(THIS_ VARIANT_BOOL*) PURE;
+	STDMETHOD(put_media)(THIS_ BSTR) PURE;
+	STDMETHOD(get_media)(THIS_ BSTR*) PURE;
+};
+
+EXTERN_C const IID IID_IHTMLImgElement;
+#undef INTERFACE
+#define INTERFACE IHTMLImgElement
+DECLARE_INTERFACE_(IHTMLImgElement,IDispatch)
+{
+	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
+	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
+	STDMETHOD_(ULONG,Release)(THIS) PURE;
+	STDMETHOD(GetTypeInfoCount)(THIS_ UINT*) PURE;
+	STDMETHOD(GetTypeInfo)(THIS_ UINT,LCID,LPTYPEINFO*) PURE;
+	STDMETHOD(GetIDsOfNames)(THIS_ REFIID,LPOLESTR*,UINT,LCID,DISPID*) PURE;
+	STDMETHOD(Invoke)(THIS_ DISPID,REFIID,LCID,WORD,DISPPARAMS*,VARIANT*,EXCEPINFO*,UINT*) PURE;
+
+	STDMETHOD(put_isMap)(THIS_ VARIANT_BOOL) PURE;
+	STDMETHOD(get_isMap)(THIS_ VARIANT_BOOL*) PURE;
+	STDMETHOD(put_useMap)(THIS_ BSTR) PURE;
+	STDMETHOD(get_useMap)(THIS_ BSTR*) PURE;
+	STDMETHOD(get_mimeType)(THIS_ BSTR*) PURE;
+	STDMETHOD(get_fileSize)(THIS_ BSTR*) PURE;
+	STDMETHOD(get_fileCreatedDate)(THIS_ BSTR*) PURE;
+	STDMETHOD(get_fileModifiedDate)(THIS_ BSTR*) PURE;
+	STDMETHOD(get_fileUpdatedDate)(THIS_ BSTR*) PURE;
+	STDMETHOD(get_protocol)(THIS_ BSTR*) PURE;
+	STDMETHOD(get_href)(THIS_ BSTR*) PURE;
+	STDMETHOD(get_nameProp)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_border)(THIS_ VARIANT) PURE;
+	STDMETHOD(get_border)(THIS_ VARIANT*) PURE;
+	STDMETHOD(put_vspace)(THIS_ long) PURE;
+	STDMETHOD(get_vspace)(THIS_ long*) PURE;
+	STDMETHOD(put_hspace)(THIS_ long) PURE;
+	STDMETHOD(get_hspace)(THIS_ long*) PURE;
+	STDMETHOD(put_alt)(THIS_ BSTR) PURE;
+	STDMETHOD(get_alt)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_src)(THIS_ BSTR) PURE;
+	STDMETHOD(get_src)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_lowsrc)(THIS_ BSTR) PURE;
+	STDMETHOD(get_lowsrc)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_vrml)(THIS_ BSTR) PURE;
+	STDMETHOD(get_vrml)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_dynsrc)(THIS_ BSTR) PURE;
+	STDMETHOD(get_dynsrc)(THIS_ BSTR*) PURE;
+	STDMETHOD(get_readyState)(THIS_ BSTR*) PURE;
+	STDMETHOD(get_complete)(THIS_ VARIANT_BOOL*) PURE;
+	STDMETHOD(put_loop)(THIS_ VARIANT) PURE;
+	STDMETHOD(get_loop)(THIS_ VARIANT*) PURE;
+	STDMETHOD(put_align)(THIS_ BSTR) PURE;
+	STDMETHOD(get_align)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_onload)(THIS_ VARIANT) PURE;
+	STDMETHOD(get_onload)(THIS_ VARIANT*) PURE;
+	STDMETHOD(put_onerror)(THIS_ VARIANT) PURE;
+	STDMETHOD(get_onerror)(THIS_ VARIANT*) PURE;
+	STDMETHOD(put_onabort)(THIS_ VARIANT) PURE;
+	STDMETHOD(get_onabort)(THIS_ VARIANT*) PURE;
+	STDMETHOD(put_name)(THIS_ BSTR) PURE;
+	STDMETHOD(get_name)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_width)(THIS_ long) PURE;
+	STDMETHOD(get_width)(THIS_ long*) PURE;
+	STDMETHOD(put_height)(THIS_ long) PURE;
+	STDMETHOD(get_height)(THIS_ long*) PURE;
+	STDMETHOD(put_start)(THIS_ BSTR) PURE;
+	STDMETHOD(get_start)(THIS_ BSTR*) PURE;
+};
+
+EXTERN_C const IID IID_IHTMLElementCollection;
+#undef INTERFACE
+#define INTERFACE IHTMLElementCollection
+DECLARE_INTERFACE_(IHTMLElementCollection,IDispatch)
+{
+	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
+	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
+	STDMETHOD_(ULONG,Release)(THIS) PURE;
+	STDMETHOD(GetTypeInfoCount)(THIS_ UINT*) PURE;
+	STDMETHOD(GetTypeInfo)(THIS_ UINT,LCID,LPTYPEINFO*) PURE;
+	STDMETHOD(GetIDsOfNames)(THIS_ REFIID,LPOLESTR*,UINT,LCID,DISPID*) PURE;
+	STDMETHOD(Invoke)(THIS_ DISPID,REFIID,LCID,WORD,DISPPARAMS*,VARIANT*,EXCEPINFO*,UINT*) PURE;
+
+	STDMETHOD(toString)(THIS_ BSTR*) PURE;
+	STDMETHOD(put_length)(THIS_ long) PURE;
+	STDMETHOD(get_length)(THIS_ long*) PURE;
+	STDMETHOD(get__newEnum)(THIS_ IUnknown**) PURE;
+	STDMETHOD(item)(THIS_ VARIANT,VARIANT,IDispatch**) PURE;
+	STDMETHOD(tags)(THIS_ VARIANT,IDispatch**) PURE;
+};
+
 
 EXTERN_C const IID IID_IHTMLDocument;
 #undef INTERFACE
@@ -32,7 +154,7 @@ DECLARE_INTERFACE_(IHTMLDocument,IDispatch)
 	STDMETHOD(GetIDsOfNames)(THIS_ REFIID,LPOLESTR*,UINT,LCID,DISPID*) PURE;
 	STDMETHOD(Invoke)(THIS_ DISPID,REFIID,LCID,WORD,DISPPARAMS*,VARIANT*,EXCEPINFO*,UINT*) PURE;
 
-        STDMETHOD(get_Script)(THIS_ IDispatch**) PURE;
+	STDMETHOD(get_Script)(THIS_ IDispatch**) PURE;
 };
 
 EXTERN_C const IID IID_IHTMLDocument2;
@@ -118,7 +240,7 @@ DECLARE_INTERFACE_(IHTMLDocument2,IHTMLDocument)
 	STDMETHOD(put_onhelp)(THIS_ VARIANT) PURE;
 	STDMETHOD(get_onhelp)(THIS_ VARIANT*) PURE;
 	STDMETHOD(put_onclick)(THIS_ VARIANT) PURE;
-       STDMETHOD(get_onclick)(THIS_ VARIANT*) PURE;
+	STDMETHOD(get_onclick)(THIS_ VARIANT*) PURE;
 	STDMETHOD(put_ondblclick)(THIS_ VARIANT) PURE;
 	STDMETHOD(get_ondblclick)(THIS_ VARIANT*) PURE;
 	STDMETHOD(put_onkeyup)(THIS_ VARIANT) PURE;
